[package]
name = "redox-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["qemu"]
qemu = []

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = { version = "0.8.8", features = ["parse"] }
serde_json = "1.0.115"
log = "0.4.20"
env_logger = "0.11.0"
nu = "0.91.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
futures = "0.3.30"
rayon = "1.8.1"
async-recursion = "1.0.5"
async-trait = "0.1.79"
loopdev-3 = "0.5.1"
libparted = "0.1.5"
convert_case = "0.6.0"
backtrace = "0.3.71"
anyhow = "1.0.81"
