[workspace]
members = ["build", "checkout", "img", "hub"]

[package]
name = "redox-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redox-build"
path = "src/main.rs"

[features]
default = ["qemu"]
qemu = ["build/qemu"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

hub = { path = "./hub" }
build = { path = "./build" }
checkout = { path = "./checkout" }
env_logger = "0.11.3"