[package]
name = "img"
version = "0.1.0"
edition = "2021"

[features]
default = ["qemu"]
qemu = []

[dependencies]
libparted = { git = "https://github.com/pop-os/libparted.git" }
log = "0.4.21"
serde_json = "1.0.115"
async-trait = "0.1.79"
fuser = { version = "0.14.0", features = ["abi-7-31"], default-features = false }
bufreaderwriter = "0.2.4"
libc = "0.2.153"
redoxfs = { git = "https://gitlab.redox-os.org/redox-os/redoxfs.git" }

hub = { path = "../hub" }
rayon = "1.10.0"
time = "0.3.36"
